# javr-monitor-brightness-scheduler

./: CMakeLists.txt  README.md  brightness_scheduler.service  brightness_scheduler.timer  example_settings.json  main.cpp
